# cinder-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  index.html  index.org
cmake/Hunter/: config.cmake
contrib/: CMakeLists.txt
contrib/Cinder-Blocks/: CMakeLists.txt
src/: GaussianWave.cpp  cinderlights.cpp  main.cpp
src/cinderlights/: GaussianWave.h  main.cpp
